# smart-document-chat-portal

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt  setup.py  test.py
api/: main.py
exception/: custom_exception.py
faiss_index/: index.faiss  index.pkl
logger/: custom_logger.py
model/: models.py
notebook/: exception_experiment.ipynb  experiments.ipynb  logging_experiment.ipynb
prompt/: prompt_library.py
src/document_analyzer/: data_analysis.py  data_ingestion.py
src/document_chat/: retrieval.py
src/document_comparison/: data_ingestion.py  document_comparator.py
src/document_ingestion/: data_ingestion.py
src/multi_document_chat/: data_ingestion.py  retrieval.py
src/single_document_chat/: data_ingestion.py  retrieval.py
templates/: index.html
utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
